bdr.BDR.scala.error
Erreur de compilation :
BDR:4: error: type mismatch;
 found   : Unit
 required: Boolean
while(dance=true){
           ^BDR:6: error: type mismatch;
 found   : Unit
 required: Boolean
  if (x="R"){
       ^BDR:9: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (x="L"){
              ^BDR:12: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (x="I"){
              ^BDR:15: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (x="A"){
              ^BDR:17: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (x="B"){
              ^BDR:20: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (x="C"){
              ^BDR:24: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (x="Z"){
              ^BDR:26: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (x="Y"){
              ^BDR:29: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (x="Z"){
              ^BDR:35: error: not found: value False
    dance=False
          ^