bdr.BDR.scala.code
var dance = true
var x = litMessage()

while(dance=true){
  x = litMessage()
  if (x="R"){
    droite()
    avance()
  } else if (x="L"){
    gauche()
    avance()
  } else if (x="I"){
    retourne()
    avance()
  } else if (x="A"){
    avance()
  } else if (x="B"){
    avance()
    avance()
  } else if (x="C"){
    avance()
    avance()
    avance()
  } else if (x="Z"){
    recule()
  } else if (x="Y"){
    recule()
    recule()
  } else if (x="Z"){
    recule()
    recule()
    recule()
  }
  else{
    dance=False
  }
}
